--- a/team.html
+++ b/team.html
@@ -11,7 +11,7 @@ Hermes Suen - CEO
 <img src="hermes.png" alt="Hermes Suen Picture" style="width:200px;">
 </center>
 <p>
-I am a Mechanical Engineering and Cognitive Brain Science major at Tufts. As part of my degree I am working in a Cognitive Science Lab, which helped me formulate the idea for -sPARK+. Having previously worked as a Teaching Assistant and Camp Counselor, I enjoy the process of education and hope to bring that energy with me. Outside of academics I am passionate about travel, hiking, and swimming.
+Hermes Suen is a Mechanical Engineering and Cognitive Brain Science major at Tufts. As part of his degree he is working in a Cognitive Science Lab, which helped him formulate the idea for -sPARK+. Having previously worked as a Teaching Assistant and Camp Counselor, he enjoys the process of education and hope to bring that energy with him. Outside of academics he is passionate about travel, hiking, and swimming.
 </p>
 <center>
 <h2>
@@ -20,6 +20,6 @@ Zach Goldman - Lead Software Engineer
 <img src="Zach.png" alt="Zach Goldman Picture" style="width:200px;">
 </center>
 <p>
-Hi there! I'm a junior Computer Science and Political Science major at Tufts University from Baltimore, Maryland. I'm currently heading the software and web development for -sPARK+!
+Zach Goldman is a junior Computer Science and Political Science major at Tufts University from Baltimore, Maryland. He is currently heading the software and web development for -sPARK+!
 </p>
 </HTML>
